# orion-ai

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py  models.py  schemas.py
backend/app/agents/: __init__.py  contracts.py  planner_agent.py  reviewer_agent.py  worker_agent.py
backend/app/api/: router.py
backend/app/core/: config.py  database.py  security.py
backend/app/db/: init_db.py
backend/app/models/: __init__.py  agent.py  audit.py  common.py  memory.py  task.py  usage.py  workflow.py
backend/app/repositories/: approval_repository.py  audit_repository.py  memory_repository.py  task_repository.py  usage_repository.py  workflow_repository.py  workflow_template_repository.py
backend/app/schemas/: agent.py  approval.py  audit.py  common.py  memory.py  task.py  tool.py  usage.py  workflow.py
backend/app/services/: agent_service.py  approval_service.py  audit_service.py  memory.py  memory_service.py  orchestration_service.py  task_service.py  tools.py  usage_service.py  workflow.py  workflow_engine.py  (+3 more)
backend/tests/: conftest.py  test_additional_api_coverage.py  test_api.py  test_approvals.py  test_audit.py  test_health.py  test_memory.py  test_metrics_and_planner_coverage.py  test_security.py  test_service_unit_coverage.py  test_task_service_and_session.py  test_tasks_workflow.py  test_tools_and_planner.py  test_unit_coverage.py  test_usage.py  test_workflow_engine_unit.py  test_workflow_insight_service.py  test_workflow_retries.py
(+49 files in other folders)
