[project]
name = "orion-backend"
version = "0.1.0"
description = "Orion AI FastAPI backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic-settings>=2.3.0",
  "sqlalchemy>=2.0.31",
  "psycopg[binary]>=3.2.0",
  "langchain>=0.2.0",
  "langgraph>=0.1.0",
  "faiss-cpu>=1.8.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "httpx>=0.27.0",
  "ruff>=0.5.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
